--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
