--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@artsy/fresnel": "^3.5.0",
+    "aos": "^2.3.4",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
