--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
