chore: add hotjar lib

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-plugin-react": "^7.29.2",
+    "react-hotjar": "^5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
   }
