--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-lottie": "^1.2.3",
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
