--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/styled-components": "^5.1.23",
