--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/pages/index.tsx", "src/context/useTheme.jsx", "src/utils/useWidth.jsx"  ],
+, "src/pages/index.tsx"],
   "exclude": [
     "node_modules"
-  ],
-  "files": [
-    "src/styles/theme/styled.d.ts"
   ]
 }
