--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^6.7.1",
     "@types/prismic-dom": "^2.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.5.0",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "phosphor-react": "^1.4.1",
