--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-lottie": "^1.2.3",
