feat: add variables in .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,6 @@
 CONTENTFUL_API_URL=https://exemple-api-contentful.com
 CONTENTFUL_SPACE_ID=id-space
 CONTENTFUL_ACCESS_TOKEN=-access-token
+HOTJAR_ID=id_hotjar
+HOTJAR_SV=sv_hotjar
+GOOGLE_ANALYTiCS=metrics_google
