feat: add google search console

--- a/.env.exemple
+++ b/.env.exemple
@@ -4,3 +4,4 @@ CONTENTFUL_ACCESS_TOKEN=-access-token
 NEXT_PUBLIC_HOTJAR_ID=id_hotjar
 NEXT_PUBLIC_HOTJAR_SV=sv_hotjar
 NEXT_PUBLIC_GOOGLE_ANALYTiCS=metrics_google
+NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE=id_console
