feat: create form contact

--- a/.env.exemple
+++ b/.env.exemple
@@ -5,3 +5,5 @@ NEXT_PUBLIC_HOTJAR_ID=id_hotjar
 NEXT_PUBLIC_HOTJAR_SV=sv_hotjar
 NEXT_PUBLIC_GOOGLE_ANALYTiCS=metrics_google
 NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE=id_console
+GMAIL_USERNAME=exemple@gmail.com
+GMAIL_PASSWORD=exemple@123
