--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@artsy/fresnel": "^3.5.0",
     "@contentful/rich-text-react-renderer": "^15.21.2",
     "@prismicio/client": "^6.7.1",
+    "@svgr/webpack": "^8.1.0",
     "@types/prismic-dom": "^2.1.1",
     "aos": "^2.3.4",
     "date-fns": "^3.6.0",
@@ -32,6 +33,8 @@
     "react-loading-skeleton": "^3.1.0",
     "react-lottie": "^1.2.3",
     "react-switch": "^6.0.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
